--- a/sections/data.tex
+++ b/sections/data.tex
@@ -121,7 +121,7 @@ Our goal is to reduce the correlations between the DESI LRG target density and t
 \end{enumerate}
 
 \mc{Santi: Elaborate how these maps are selected. Edmond: You can comment a bit on the different combinations; why / how do you decide which combination we want ? (maybe just say that it is explained below, your sentence on visual inspection). Alex: Throughout—I think it would be clearer if you always referred to every method with 2 labels, “[linear/nonlinear] [map name]”.} 
-It is imperative that these sets are selected prior to examining the auto power spectrum of the LRG sample and unblinding the $\fnl$ constraints. The auto power spectrum measurements are \textit{unblinded} only after our mitigation methods passed our rigorous tests for residual systematics, which we describe in \S \ref{ssec:characterization}. We begin with the linear model and two maps (extinction and depth in z), as these two maps indicated the highest correlations with the LRG density. Linear two maps is the most conservative method in terms of both the model flexibility and the number of input maps. We clean the sample using the imaging weights obtained from \textit{linear two maps}, and find that the linear two maps approach mitigates most of the spurious density fluctuations and reduces the cross-correlations between the LRG density and the imaging systematic maps, except for the trends against psfsize in the r and z bands. Adding the r-band psfsize improves the linear model performance such that the cross correlations are similar to those obtained from \textit{linear eight maps}, which indicates no further information can be extracted from eight maps. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects, and find that the neural network-based weights significantly reduce the cross correlations and spurious density fluctuations of the DESI LRG sample and imaging systematic maps. Additionally, we consider neural network with four, five, and nine maps to further examine the robustness of our cleaning methods.
+It is imperative that these sets are selected prior to examining the auto power spectrum of the LRG sample and unblinding the $\fnl$ constraints. The auto power spectrum measurements are \textit{unblinded} only after our mitigation methods passed our rigorous tests for residual systematics, which we describe in \S \ref{ssec:characterization}. We begin with the linear model and two maps (extinction and depth in z), as these two maps indicated the highest correlations with the LRG mean density. Linear two maps is the most conservative method in terms of both the model flexibility and the number of input maps. We clean the sample using the imaging weights obtained from \textit{linear two maps}, and find that the linear two maps approach mitigates most of the spurious density fluctuations and reduces the cross-correlations between the LRG density and the imaging systematic maps, except for the trends against psfsize in the r and z bands. Adding the r-band psfsize improves the linear model performance such that the cross correlations are similar to those obtained from \textit{linear eight maps}, which indicates no further information can be extracted from eight maps. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects, and find that the neural network-based weights significantly reduce the cross correlations and spurious density fluctuations of the DESI LRG sample and imaging systematic maps. Additionally, we consider neural network with four, five, and nine maps to further examine the robustness of our cleaning methods.
 
 \subsection{Synthetic lognormal density fields}\label{ssec:mocks}
 Density fluctuations of galaxies on large scales can be approximated with lognormal distributions \citep{coles1991}. Unlike N-body simulations, simulating lognormal density fields is not computationally intensive, and allows quick and robust validation of data analysis pipelines. Lognormal simulations are therefore considered efficient for our study since the signature of local PNG appears on large-scales and small-scale clustering is not used in our analysis. The package \textsc{FLASK} \citep[Full-sky Lognormal Astro-fields Simulation Kit;][]{Xavier_2016} is employed to generate ensembles of synthetic lognormal density maps that mimic the bias, redshift, and angular distributions of the DESI LRG targets, as illustrated in Figure \ref{fig:nz} and \ref{fig:ng}. Two universes with $\fnl=0$ and $76.92$ are considered. A set of 1000 realizations are produced for every $\fnl$. The analysis adapts the fiducial BOSS cosmology \citep{2017MNRAS.470.2617A} which assumes a flat $\Lambda$CDM universe, including one massive neutrino with $m_{\nu}=0.06$ eV, Hubble constant $h = 0.68$, matter density $\Omega_{M}=0.31$, baryon density $\Omega_{b}=0.05$, and spectral index $n_{s}=0.967$. The amplitude of the matter density fluctuations on a scale of $8 h^{-1} \text{Mpc}$ is set as $\sigma_{8}=0.8225$. The same fiducial cosmology is used throughout this paper unless specified otherwise. \mc{Santi: how sensitive is the fnl signal to the choice of fiducial cosmology.}
