--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 \label{sec:introduction}
 
-Inflation is a widely accepted paradigm in modern cosmology that explains many important characteristics of our Universe. It predicts that the early Universe underwent a period of accelerated expansion, resulting in the observed homogeneity and isotropy of the Universe on large scales \citep[see, e.g.,][for a review]{weinberg2013observational}. After the period of inflation, the Universe entered a phase of reheating in which primordial perturbations were generated, setting the initial seeds for structure formation \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Although inflation is widely accepted as a compelling explanation, the characteristics of the field or fields that drove the inflationary expansion remain largely unknown in contemporary observational cosmology. While early studies of the cosmic microwave background (CMB) and large-scale structure (LSS) suggested that primordial fluctuations are both Gaussian and scale-invariant \citep{PhysRevD.69.103501, guth2005inflationary}, some alternative classes of inflationary models predict some levels of non-Gaussianities in the primordial gravitational field. Non-Gaussianities are a measure of the degree to which the distribution of matter in the Universe deviates from a Gaussian distribution, which would have important implications for the growth of structure and galaxies in the Universe \citep[see, e.g.,][]{2010CQGra..27l4011D, Biagetti2019Galax...7...71B}.
+Inflation is a widely accepted paradigm in modern cosmology that explains many important characteristics of our Universe. It predicts that the early Universe underwent a period of accelerated expansion, resulting in the observed homogeneity and isotropy of the Universe on large scales \citep[see, e.g.,][for a review]{weinberg2013observational}. After the period of inflation, the Universe entered a phase of reheating in which primordial perturbations were generated, setting the initial seeds for structure formation \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Although inflation is widely accepted as a compelling explanation, the characteristics of the field or fields that drove the inflationary expansion remain largely unknown in modern cosmology. While early studies of the cosmic microwave background (CMB) and large-scale structure (LSS) suggested that primordial fluctuations are both Gaussian and scale-invariant \citep{PhysRevD.69.103501, guth2005inflationary}, some alternative classes of inflationary models predict different levels of non-Gaussianities in the primordial gravitational field. Non-Gaussianities are a measure of the degree to which the distribution of matter in the Universe deviates from a Gaussian distribution, which would have important implications for the growth of structure and galaxies in the Universe \citep[see, e.g.,][]{2010CQGra..27l4011D, Biagetti2019Galax...7...71B}.
 
 In its simplest form, local primordial non-Gaussianity (PNG) is parameterized by the non-linear coupling constant $\fnl$\citep{komatsu2001acoustic}:
 \begin{equation}
