--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -108,11 +108,10 @@ We briefly summarize two statistical tests based on the mean galaxy density cont
 
 
 \begin{figure}
-\raggedleft
+\centering
 \includegraphics[width=0.45\textwidth]{chi2test.pdf}
 \includegraphics[width=0.44\textwidth]{chi2test2.pdf}
-\caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DESI LRG targets before and after linear and nonlinear treatments are quoted, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.92$. \mc{Alex: can you show the DR9 chi2s as vertical lines rather than as text? Ashley: I think you could add one vertical dashed and/or dotted line to show the result for the Nonlinear 3 maps, which is what we adopt as the fiducial case.}
-}\label{fig:chi2test}
+\caption{The remaining systematic error $\chi^{2}$ from the galaxy-imaging cross power spectrum (top) and the mean galaxy density contrast (bottom). The values observed in the DESI LRG targets before and after linear and nonlinear treatments are represented via vertical lines, and the histograms are constructed from 1000 realizations of clean lognormal mocks with $\fnl=0$ and $76.92$.}\label{fig:chi2test}
 \end{figure}
 
 
@@ -149,23 +148,19 @@ and the total residual error as,
 \end{equation}
 where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.92$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however,  a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (dot-dashed blue curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low ends of depth and psfsize, in the z band, which implies nonlinear systematic effects exist. We find that the imaging weights from the nonlinear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. Even with the nonlinear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
 
-Table \ref{tab:chi2test} summarizes the $\chi^{2}$ values observed in the data and the corresponding p-values inferred from the comparison to the clean $\fnl=0$ mocks. Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cross spectrum (top) and mean density contrast (bottom) statistics which are obtained from the $\fnl=0$ and $76.9$ lognormal mocks, respectively with dashed and solid lines. No mitigation is applied to these mocks, and thus the $\chi^{2}$ values are expected to be unbiased. The $\chi^{2}$ values observed in the DESI LRG targets are quoted for comparison, and the significance for each measurement is characterized by \textit{p-value} with respect to the $\fnl=0$ mocks without any mitigation applied to them. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with p-value $=0.002$. Adding the r-band psfsize, the linear model reduces the $\chi^{2}$ down to $195.9$ with p-value $=0.044$; however, we can reject the null hypothesis that our sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though cleaning with linear all maps gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and p-value $=0.239$), it potentially makes the analysis more prone to regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with p-value $=0.594$. Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ (p-value $=0.687$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
+Figure \ref{fig:chi2test} shows the $\chi^{2}$ histograms from the normalized cross spectrum (top) and mean density contrast (bottom) statistics which are obtained from the $\fnl=0$ and $76.9$ lognormal mocks, respectively with solid and dashed lines. The $\chi^{2}$ tests prove to be insensitive to the true $\fnl$ of the mocks, as we obtain consistent distributions for both statistics, regardless of the true $\fnl$ used for the mock generation. No mitigation is applied to these mocks, and thus the $\chi^{2}$ values are expected to be unbiased. The $\chi^{2}$ values observed in the DESI LRG targets are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The corresponding $p$-values are inferred from the comparison to the clean $\fnl=0$ mocks. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with $p$-value $=0.0$. Adding the r-band psfsize, the linear three maps approach reduces the $\chi^{2}$ down to $195.9$ with $p$-value $=0.04$; however, we can reject the null hypothesis that our sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though cleaning with linear all maps gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and $p$-value $=0.24$), it potentially makes the analysis more prone to regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with $p$-value $=0.59$. Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ ($p$-value $=0.69$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
 
-\mc{Ashley: Add something at the end to clarify the reason that the extinction map can cause the stellar density trend is that they are strongly correlated.} 
-Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. We find consistent results regardless of the underlying $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DESI LRG targets before and after applying imaging weights are quoted for comparison. The \textit{linear two maps} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The p-value $=0$ indicates severe remaining systematic effects. Adding the r-band psfsize does not reduce the remaining systematics enough (p-value $=0$) even though the cleaning method yields a lower $\chi^{2}=130$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and p-value of $0.084$. However, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. With the imaging weights from the \textit{nonlinear three maps} approach, we obtain a $\chi^{2}$ value of $74.3$ with p-value $=0.392$. Re-training the nonlinear approach while adding the stellar density map (\textit{nonlinear four maps}) yields minor improvement: $\chi^{2}=73.2$ and p-value $=0.422$. The minor impact on $\chi^{2}$ indicates that the stellar density trend in the mean LRG density can be explained via extinction since these two properties are strongly correlated; In regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light.
 
-\mc{Ashley: I would maybe add a new subsubsection (but at least a new paragraph) to summarize the results of the subsection, as they are quite important. This is also where I would discuss the tests that were done prior to looking at the data Cell. The discussion would basically provide a strong justification for the 3 map case being the fiducial case and point out that this was decided prior to seeing the data results. (Some of the words you wrote at the beginning of section 3.5 would go instead in this summary.)}
-The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and $\fnl$. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with nonlinear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks. Based on these findings, we identify nonlinear three maps as the optimal cleaning approach for the LRG sample, because adding more imaging systematics maps could potentially further complicate the over-correction issue.
 
 \begin{table}
-  \caption{Mean density and cross power spectrum $\chi^{2}$ and p-values that are inferred from the comparison to the $\fnl=0$ clean mocks.}\label{tab:chi2test}
+  \caption{Mean density and cross power spectrum $\chi^{2}$ and $p$-values that are inferred from the comparison to the $\fnl=0$ clean mocks.}\label{tab:chi2test}
   \begin{tabular}{lcccc}
     \hline
     \hline
-    \multirow{2}{*}{\textbf{Cleaning Method}} &
+    \multirow{2}{*}{\textbf{Method}} &
       \multicolumn{2}{c}{\textbf{Mean Density}} &
-      \multicolumn{2}{c}{\textbf{Cross Power Spectrum}} \\
-    & $\chi^{2}$ & p-value & $\chi^{2}$ & p-value \\
+      \multicolumn{2}{c}{\textbf{Cross Spectrum}} \\
+    & $\chi^{2}$ & $p$-value & $\chi^{2}$ & $p$-value \\
     \hline
    No Weight & 679.8 & 0 & 20014.8 & 0 \\
    Linear Two Maps & 178.8 & 0 & 375.1 & 0\\
@@ -178,18 +173,29 @@ The mean density contrast and cross power spectrum tests presented here show the
 \end{table}
 
 
+\mc{Ashley: Add something at the end to clarify the reason that the extinction map can cause the stellar density trend is that they are strongly correlated.} 
+Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. Similar to the cross power spectrum test, we find consistent results for the mean density diagnostic regardless of the underlying true $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DESI LRG targets before and after applying imaging weights are shown via the vertical lines for comparison, and summarized in Table \ref{tab:chi2test}. The \textit{linear two maps} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The $p$-value $=0$ indicates severe remaining systematic effects. Adding the r-band psfsize reduces the error to $\chi^{2}=130$ but the remaining systematics remain statistically significant with $p$-value $=0$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and $p$-value of $0.08$. However, as noted earlier, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. On the other hand, we obtain a $\chi^{2}$ value of $74.3$ with $p$-value $=0.39$ with the imaging weights from the \textit{nonlinear three maps} approach. Re-training the nonlinear approach while adding the stellar density map (\textit{nonlinear four maps}) yields minor improvement: $\chi^{2}=73.2$ and $p$-value $=0.42$. The minor impact on $\chi^{2}$ indicates that the stellar density trend in the mean LRG density can be explained via extinction because of the strong correlation between these two properties, such that in regions with high stellar density, there is likely to be a higher concentration of dust, which can cause greater extinction of light.
+
+
+
+\mc{Ashley: I would maybe add a new subsubsection (but at least a new paragraph) to summarize the results of the subsection, as they are quite important. This is also where I would discuss the tests that were done prior to looking at the data Cell. The discussion would basically provide a strong justification for the 3 map case being the fiducial case and point out that this was decided prior to seeing the data results. (Some of the words you wrote at the beginning of section 3.5 would go instead in this summary.)}
+The mean density contrast and cross power spectrum tests presented here show the effectiveness of the different cleaning approaches for the LRG sample before measuring the galaxy power spectrum and using it to constrain $\fnl$. In other words, none of these tests require unblinding the measured power spectrum or $\fnl$ constraints. As summarized in Table \ref{tab:chi2test}, the results of these tests reveal that cleaning the LRG sample with nonlinear three maps produces statistically consistent $\chi^{2}$ values with the clean mocks, regardless of the true $\fnl$ used in the generation of the mocks. On the other hand, the linear three maps approach is not able to thoroughly mitigate systematics, as characterised by $p$-value $=0$ and $=0.04$, respectively, for the mean density and cross power spectrum diagnostics. Based on these findings, we identify nonlinear three maps as the optimal cleaning approach for the LRG sample and the rest of this manuscript, because including any additional imaging systematics maps could potentially further complicate the over-correction issue.
+
+
 \subsection{Calibration of mitigation bias}\label{ssec:calibration}
 
 \mc{Santi: How all of this was computed did not seem very clear to me. It seems that this part is what later determines that fnl!=0 from the data. So I think it would be worth explaining it more. Ashley: I would find a way to *strongly* emphasize that the result does not depend at all on how the mocks were contaminated. Perhaps just a concluding sentence or two in its own paragraph along the lines. Ashley: It is important to note that we find nearly identical results for the mitigation bias whether or not the mocks have any contamination. This can be seen by observing the solid and dashed curves displayed on Fig. 9}
 The template-based mitigation of imaging systematics removes some of the true clustering signal, and the amount of the removed signal increases as more maps are used for the regression. We calibrate the over-correction effect using the mocks presented in \S \ref{sec:data}. We applied the neural network model to both the $\fnl=0$ and $76.9$ simulations, with and without imaging systematics, using various sets of imaging systematic maps. Specifically, we consider \textit{nonlinear three maps}, \textit{nonlinear four maps}, and \textit{nonlinear nine maps}. Then, we measure the power spectra from the mocks. We fit both the mean power spectrum and each individual power spectrum from the mocks. Figure \ref{fig:fnlbias} displays a comparison between the estimates of $\fnl$ before and after mitigation for the clean mocks. The best-fitting estimates are represented by the solid curves, and the individual spectra results are displayed as the scatter points. The results from fitting the mean power spectrum of the contaminated mocks are also shown via the dashed curves. We find nearly identical results for the biases caused by mitigation, whether or not the mocks have any contamination, which can be seen by observing the solid and dashed curves displayed on Figure \ref{fig:fnlbias} (see, also, Figure \ref{fig:clmocks}, for a comparison of the mean power spectrum). For clarity, the best-fitting estimates for the individual contaminated data are not shown in the figure.
 
-To calibrate our methods, we fit a linear curve to the $\fnl$ estimates from the mean power spectrum of the mocks, $f_{\rm NL, no~mitigation, clean} = m_{1} f_{\rm NL, mitigated} + m_{2}$. The $m_{1}$ and $m_{2}$ coefficients for nonlinear three, four, and nine maps are summarized in Table \ref{tab:debiasparams}. These coefficients represent the impact of the cleaning methods on the likelihood. We find that the uncertainty in $\fnl$ after mitigation increases by $m_{1}-1$. Figure \ref{fig:fnlbias} also shows that the choice of our cleaning method can have significant implications for the accuracy of the measured $\fnl$, and careful consideration should be given to the selection of the primary imaging systematic maps and the calibration of the cleaning algorithms in order to minimize systematic uncertainties.
 
 \begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{figures/fnlbias}
 \caption{The \textit{No mitigated, clean} vs \textit{mitigated} $\fnl$ values from the $\fnl=0$ and $76.9$ mocks. The solid (dashed) lines represent the best-fitting estimates from fitting the mean power spectrum of the clean (contaminated) mocks. The scatter points show the best-fitting estimates from fitting the individual spectra for the clean mocks.}\label{fig:fnlbias}
 \end{figure}
+
+To calibrate our methods, we fit a linear curve to the $\fnl$ estimates from the mean power spectrum of the mocks, $f_{\rm NL, no~mitigation, clean} = m_{1} f_{\rm NL, mitigated} + m_{2}$. The $m_{1}$ and $m_{2}$ coefficients for nonlinear three, four, and nine maps are summarized in Table \ref{tab:debiasparams}. These coefficients represent the impact of the cleaning methods on the likelihood. We find that the uncertainty in $\fnl$ after mitigation increases by $m_{1}-1$. Figure \ref{fig:fnlbias} also shows that the choice of our cleaning method can have significant implications for the accuracy of the measured $\fnl$, and careful consideration should be given to the selection of the primary imaging systematic maps and the calibration of the cleaning algorithms in order to minimize systematic uncertainties.
+
 
 \begin{table}
 \begin{center}
